<?xml version="1.0"?>
<package format="2">
  <name>my_simulations</name>
  <version>0.0.0</version>
  <description>The my_simulations package</description>

  
  <maintainer email="orb@todo.todo">orb</maintainer>


  
  <license>TODO</license>
 
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>
  
  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>

  </export>
</package>
